v1/docs/ModelsSecurityIdentitiesSecurityIdentityIdentifier.md
# ModelsSecurityIdentitiesSecurityIdentityIdentifier

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**AccountName** | Pointer to **string** | The username of the security identity. | [optional] 
**SID** | Pointer to **string** | The SID of the security identity. | [optional] 

## Methods

### NewModelsSecurityIdentitiesSecurityIdentityIdentifier

`func NewModelsSecurityIdentitiesSecurityIdentityIdentifier() *ModelsSecurityIdentitiesSecurityIdentityIdentifier`

NewModelsSecurityIdentitiesSecurityIdentityIdentifier instantiates a new ModelsSecurityIdentitiesSecurityIdentityIdentifier object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsSecurityIdentitiesSecurityIdentityIdentifierWithDefaults

`func NewModelsSecurityIdentitiesSecurityIdentityIdentifierWithDefaults() *ModelsSecurityIdentitiesSecurityIdentityIdentifier`

NewModelsSecurityIdentitiesSecurityIdentityIdentifierWithDefaults instantiates a new ModelsSecurityIdentitiesSecurityIdentityIdentifier object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetAccountName

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) GetAccountName() string`

GetAccountName returns the AccountName field if non-nil, zero value otherwise.

### GetAccountNameOk

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) GetAccountNameOk() (*string, bool)`

GetAccountNameOk returns a tuple with the AccountName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAccountName

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) SetAccountName(v string)`

SetAccountName sets AccountName field to given value.

### HasAccountName

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) HasAccountName() bool`

HasAccountName returns a boolean if a field has been set.

### GetSID

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) GetSID() string`

GetSID returns the SID field if non-nil, zero value otherwise.

### GetSIDOk

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) GetSIDOk() (*string, bool)`

GetSIDOk returns a tuple with the SID field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSID

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) SetSID(v string)`

SetSID sets SID field to given value.

### HasSID

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) HasSID() bool`

HasSID returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


