v11/docs/ModelsSecurityIdentitiesSecurityIdentityIdentifier.md
# ModelsSecurityIdentitiesSecurityIdentityIdentifier

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**AccountName** | Pointer to **NullableString** |  | [optional] 
**Sid** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsSecurityIdentitiesSecurityIdentityIdentifier

`func NewModelsSecurityIdentitiesSecurityIdentityIdentifier() *ModelsSecurityIdentitiesSecurityIdentityIdentifier`

NewModelsSecurityIdentitiesSecurityIdentityIdentifier instantiates a new ModelsSecurityIdentitiesSecurityIdentityIdentifier object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsSecurityIdentitiesSecurityIdentityIdentifierWithDefaults

`func NewModelsSecurityIdentitiesSecurityIdentityIdentifierWithDefaults() *ModelsSecurityIdentitiesSecurityIdentityIdentifier`

NewModelsSecurityIdentitiesSecurityIdentityIdentifierWithDefaults instantiates a new ModelsSecurityIdentitiesSecurityIdentityIdentifier object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetAccountName

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) GetAccountName() string`

GetAccountName returns the AccountName field if non-nil, zero value otherwise.

### GetAccountNameOk

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) GetAccountNameOk() (*string, bool)`

GetAccountNameOk returns a tuple with the AccountName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAccountName

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) SetAccountName(v string)`

SetAccountName sets AccountName field to given value.

### HasAccountName

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) HasAccountName() bool`

HasAccountName returns a boolean if a field has been set.

### SetAccountNameNil

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) SetAccountNameNil(b bool)`

 SetAccountNameNil sets the value for AccountName to be an explicit nil

### UnsetAccountName
`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) UnsetAccountName()`

UnsetAccountName ensures that no value is present for AccountName, not even an explicit nil
### GetSid

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) GetSid() string`

GetSid returns the Sid field if non-nil, zero value otherwise.

### GetSidOk

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) GetSidOk() (*string, bool)`

GetSidOk returns a tuple with the Sid field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSid

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) SetSid(v string)`

SetSid sets Sid field to given value.

### HasSid

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) HasSid() bool`

HasSid returns a boolean if a field has been set.

### SetSidNil

`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) SetSidNil(b bool)`

 SetSidNil sets the value for Sid to be an explicit nil

### UnsetSid
`func (o *ModelsSecurityIdentitiesSecurityIdentityIdentifier) UnsetSid()`

UnsetSid ensures that no value is present for Sid, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


